# Otsuka-Shokai-TeamC

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  env_example.txt  gpt_call_template.ipynb  preload_whisper.py  pyproject.toml  requirements.txt
data/: products_seed_enriched.sql  tanomail_pc_list.csv
docs/: dify-supabase-hands-on.md  fin_DB設計.md  supabase_tablelist_schema.sql  インタビュー.md  開発方針.md  開発進捗状況.md
scripts/: .env_example  append_sql_products_to_supabase.py  embedding.py  enrich_products_description.py  import_tanomail_products_with_pat.py
src/: state.py  utils.py
src/app/: app.py
src/app_src/components/: whisper_page.py
src/app_src/jobs/: runner.py
src/app_src/services/: api.py  dedup.py  priority.py
src/services/: asr.py  dify_service.py  summary.py  supabase_db.py
src/ui/: assist_tab.py  backlog_tab.py  debug_tab.py  header.py  history_tab.py  profile_tab.py  sidebar.py  transcript_tab.py
src_old/app/: app.py
src_old/app_src/components/: questions_panel.py  top3_cards.py  whisper_page.py
src_old/app_src/services/: api.py  asr.py  constants.py  job_store.py  summary.py  supabase_db.py
